# gstreamer

./: configure.ac
ext/: Makefile.am
ext/daala/: gstdaaladec.c
ext/dash/: gstmpdparser.c
ext/kate/: gstkateenc.c
ext/mir/: Makefile.am  gstmirsink.c  gstmirsink.h  mirpool.c  mirpool.h
gst-libs/gst/: Makefile.am
gst-libs/gst/mir/: Makefile.am  mirallocator.c  mirallocator.h
po/: nb.po
sys/: Makefile.am
sys/androidmedia/: Makefile.am  gstamc.h  gstamcaudiodechybris.c  gstamchybris.c  gstamcvideodec.h  gstamcvideodechybris.c
sys/applemedia/: coremediabuffer.c  corevideobuffer.c  vtdec.c  vtenc.c
sys/directdraw/: gstdirectdrawsink.c
sys/winscreencap/: gstdx9screencapsrc.c  gstgdiscreencapsrc.c
tests/check/elements/: mpegtsmux.c  opus.c
